--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta
+            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;"
+            name="viewport"
+        />
         <meta name="theme-color" content="#000000" />
         <link
             rel="shortcut icon"
